style: 集中治理 Sonar 剩余 37 项代码坏味道（真修 18 项，其余针对性抑制并说明）
- ExcelUtils（S1168×2）：resolveHeadKeyMap/buildRowData 不再以 null 表示空值，
  统一返回空集合；顺带消除空表头工作表 `(JSONArray) Collections.emptyList()`
  强转必抛 ClassCastException 的存量隐患
- OssStorageStrategy（S6244×4）：批量删除/完成分片上传/预签名 URL 的嵌套
  builder 改用 S3 SDK Consumer Builder 重载，清理失效 import
- OssStorageStrategy（S6204×2）：方法内局部列表改用 Stream.toList()
- LicenseCreateService（S112）：buildCreator 收窄为 throws IOException
- ServerInfoUtils（S112）：getLocalAllInetAddress 收窄为 throws SocketException
- CharConstants/StringConstants（S6355/S1133）：EQUALS 补
  @Deprecated(since = "2.17.0", forRemoval = true)
- CommonsMultipartFile（S4042）：改用 Files.delete 并保留原异常消息与 cause
- AccessLogUtils（S3824）：containsKey+put 改 computeIfPresent
- ExcelUtils（S4719）：ISO8859_1 改用 StandardCharsets.ISO_8859_1
- S3011×16（ExcelUtils/ReflectUtils）：注解驱动反射赋值为模块核心机制，
  setAccessible 必要，抑制并说明
- S6204×2（OssStorageStrategy.list/listParts）：公开 API 列表返回保持可变
  契约（与 LocalStorageStrategy 一致），抑制并说明
- S2143×2（ExcelUtils/LicenseCreateService）：java.util.Date 为 truelicense
  API 与实体字段类型的数据边界，抑制并说明

本地 ./mvnw verify 四道门禁（Enforcer/Spotless/Checkstyle/SpotBugs）全部通过。

Assisted-by: ZCode