@@ -28,12 +28,10 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.S3Configuration;
 import software.amazon.awssdk.services.s3.model.AbortMultipartUploadRequest;
 import software.amazon.awssdk.services.s3.model.CompleteMultipartUploadRequest;
-import software.amazon.awssdk.services.s3.model.CompletedMultipartUpload;
 import software.amazon.awssdk.services.s3.model.CompletedPart;
 import software.amazon.awssdk.services.s3.model.CopyObjectRequest;
 import software.amazon.awssdk.services.s3.model.CreateMultipartUploadRequest;
 import software.amazon.awssdk.services.s3.model.CreateMultipartUploadResponse;
-import software.amazon.awssdk.services.s3.model.Delete;
 import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
 import software.amazon.awssdk.services.s3.model.DeleteObjectsRequest;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
@@ -239,11 +237,11 @@ public class OssStorageStrategy implements StorageStrategy {
             for (List<String> batch : batches) {
                 List<ObjectIdentifier> objects = batch.stream()
                     .map(path -> ObjectIdentifier.builder().key(path).build())
-                    .collect(Collectors.toList());
+                    .toList();
 
                 DeleteObjectsRequest deleteRequest = DeleteObjectsRequest.builder()
                     .bucket(bucket)
-                    .delete(Delete.builder().objects(objects).build())
+                    .delete(delete -> delete.objects(objects))
                     .build();
 
                 s3Client.deleteObjects(deleteRequest);
@@ -320,6 +318,8 @@ public class OssStorageStrategy implements StorageStrategy {
     /**
      * 列出文件
      */
+    // 返回可变列表以保持 StorageStrategy 接口既有契约，允许调用方按需修改结果集（与 LocalStorageStrategy.list 一致）
+    @SuppressWarnings("java:S6204")
     @Override
     public List<FileInfo> list(String bucket, String prefix, int maxKeys) {
         try {
@@ -399,14 +399,9 @@ public class OssStorageStrategy implements StorageStrategy {
     @Override
     public String generatePresignedUrl(String bucket, String path, long expireSeconds) {
         try {
-            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
-                .bucket(bucket)
-                .key(normalizeKey(path))
-                .build();
-
             GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
                 .signatureDuration(Duration.ofSeconds(expireSeconds))
-                .getObjectRequest(getObjectRequest)
+                .getObjectRequest(getObject -> getObject.bucket(bucket).key(normalizeKey(path)))
                 .build();
 
             PresignedGetObjectRequest presignedRequest =
@@ -422,14 +417,9 @@ public class OssStorageStrategy implements StorageStrategy {
     @Override
     public String generateUploadPresignedUrl(String bucket, String path, long expireSeconds) {
         try {
-            PutObjectRequest putObjectRequest = PutObjectRequest.builder()
-                .bucket(bucket)
-                .key(normalizeKey(path))
-                .build();
-
             PutObjectPresignRequest presignRequest = PutObjectPresignRequest.builder()
                 .signatureDuration(Duration.ofSeconds(expireSeconds))
-                .putObjectRequest(putObjectRequest)
+                .putObjectRequest(putObject -> putObject.bucket(bucket).key(normalizeKey(path)))
                 .build();
 
             PresignedPutObjectRequest presignedRequest =
@@ -613,14 +603,14 @@ public class OssStorageStrategy implements StorageStrategy {
                 .map(part -> CompletedPart.builder().partNumber(part.getPartNumber())
                     .eTag(part.getPartETag()).build())
                 .sorted(Comparator.comparingInt(CompletedPart::partNumber))
-                .collect(Collectors.toList());
+                .toList();
 
             // 构建请求
             CompleteMultipartUploadRequest request = CompleteMultipartUploadRequest.builder()
                 .bucket(bucket)
                 .key(key)
                 .uploadId(uploadId)
-                .multipartUpload(CompletedMultipartUpload.builder().parts(completedParts).build())
+                .multipartUpload(multipartUpload -> multipartUpload.parts(completedParts))
                 .build();
 
             // 完成上传
@@ -664,6 +654,8 @@ public class OssStorageStrategy implements StorageStrategy {
     /**
      * 列出已上传的分片
      */
+    // 返回可变列表以保持 StorageStrategy 接口既有契约，允许调用方按需修改结果集（与 LocalStorageStrategy.listParts 一致）
+    @SuppressWarnings("java:S6204")
     @Override
     public List<MultipartUploadResp> listParts(String bucket, String path, String uploadId) {
         try {
